modules/boogie/test/data/TypeSystemException/Orderings4.bpl

const h:int extends y;        // error: variable cannot be parent

var y:int;
